--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,26 @@
     <link rel="stylesheet" href="main.css">
      <link rel="stylesheet" href="animate.css">
     </head>
-
 <body>
-<div class="container fadeIn animated">
-    <h5 class="center-align">EPS</h5>
+<main>
+<div class="container container2 fadeIn animated">
+    <div class="center" > <img src="logo.png" height="256px" width="256px"></div>
+    <div class="row center-align">
+      <a href="/login" class="waves-effect red darken-2 btn-large">Log in</a>
+      <a href="/register" class="waves-effect red darken-2 btn-large">Sign up</a>
+</div>       
 </div>
+</main>
+
+<footer class="page-footer red darken">
+          <div class="container">
+          </div>
+    <div class="footer-copyright">
+    <div class="container">
+    <a class="grey-text text-lighten-4 center" href="#!"><b>© 2018 EPS</b></a>
+    </div>
+    </div>
+</footer>
 </body>
 
 </html>
